# KeepAliveAndroid

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/crifan/keepaliveandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/crifan/keepaliveandroid/: MainActivity.java  MainApplication.java  NetworkMonitoringUtil.java  Service1.java  Service2.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/crifan/keepaliveandroid/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
kalibrary/: build.gradle
kalibrary/src/androidTest/java/com/crifan/keepalive/: ExampleInstrumentedTest.java
kalibrary/src/main/: AndroidManifest.xml
kalibrary/src/main/cpp/: CMakeLists.txt  RePublic.cpp  common.h  data_transact.cpp  keep_alive.cpp
kalibrary/src/main/java/com/crifan/keepalive/: AutoBootReceiver.java  IKeepAliveProcess.java  KeepAlive.java  KeepAliveConfigs.java  KeepAliveProcessImpl.java  KeepAliveService.java  NativeKeepAlive.java
kalibrary/src/test/java/com/crifan/keepalive/: ExampleUnitTest.java
